applying clean code